Change title from 'City Studio' to 'IPTV工作室'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>City Studio | 城市工作室</title>
+    <title>iptv Studio | IPTV工作室</title>
 
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/png">
@@ -95,7 +95,7 @@
                     </ul>
                     <p style="
     font-size: 10px;
-">Copyright &copy; 2026 <a target="_blank" href="https://studio.us.kg/" title="城市工作室">City Studio.</a></p>
+">Copyright &copy; 2026 <a target="_blank" href="https://studio.us.kg/" title="IPTV工作室">City Studio.</a></p>
                 </div> <!-- card-social -->
             </div> <!-- header-card -->
         </div> <!-- header-card -->
@@ -190,3 +190,4 @@
 </body>
 
 </html>
+
